<resources>
    <string name="app_name">Robot Controller</string>
    <string name="title_activity_bottom_nav">Robot Controller</string>
    <string name="manual_control">Manual Control</string>
    <string name="auto_mode">Auto Mode</string>
    <string name="sensors">Sensors</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="stop">Stop</string>
    <string name="speed">Speed</string>
    <string name="emergency_stop">Emergency Stop</string>
    <string name="start_figure8">Start Figure-8</string>
    <string name="stop_figure8">Stop Figure-8</string>
    <string name="battery_level">Battery</string>
    <string name="connection_status">Status</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
